--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -1,13 +1,11 @@
+
 /* =============
-    Section 1
+    Section 2
 ============= */
 
 .badgeimg {
-     
     img {
-        width: 100%;
+        max-width: 100%;
         height: auto;
     }
-
-    
 }
