--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -9,7 +9,7 @@ html {
 /* =============
     Variables
 ============= */
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -29,6 +29,12 @@ html {
  */
 body {
   margin: 0; }
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block; }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -311,44 +317,12 @@ template {
 /* =============
     Base
 ============= */
-figure {
-  padding: 0;
-  margin: 0; }
-
-ul {
-  padding: 0;
-  margin: 0; }
-  ul li {
-    list-style: none; }
-
-.container-grid {
-  display: grid;
-  grid-template-columns: auto 1200px auto;
-  grid-template-areas: ". grid-content .";
-  min-height: 100vh; }
-  .container-grid .grid-content {
-    grid-area: grid-content;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-
 /* =============
     Typography
 ============= */
-body {
-  font-family: 'Montserrat', sans-serif; }
-
-h1, h2, h3, h4 {
-  margin: 0;
-  padding: 0; }
-
-p {
-  margin: 0;
-  padding: 0; }
-
-.section-title {
-  font-weight: 300; }
+h1 {
+  font-family: "Nunito, sans-serif";
+  text-align: left; }
 
 /* =============
     Buttons
@@ -374,18 +348,54 @@ textarea {
 /* =============
     Header
 ============= */
+body, html {
+  height: 100%; }
+
+/* The hero image */
+.hero-image {
+  background-image: url("Header_Background.png");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; }
+  .hero-image img {
+    width: 100%;
+    height: auto; }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #F6F1F0; }
+
+li {
+  float: left; }
+
+li a {
+  display: block;
+  color: gray;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none; }
+
+li a:hover {
+  background-color: #111; }
+
 /* =============
     Footer
 ============= */
 /* =============
     Section 1
 ============= */
+.badgeimg img {
+  width: 100%;
+  height: auto; }
+
 /* =============
     Section 2
 ============= */
-/* =============
-    Section 3
-============= */
-/* =============
-    Section 4
-============= */
+.badgeimg img {
+  max-width: 100%;
+  height: auto; }
