--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -21,3 +21,7 @@ $black: #000;
 $gray: #333;
 $offblack: #111;
 $offwhite: #F6F1F0;
+$buttonred: #E15C5C;
+$light: #776b6b;
+$gradientred: #ff0010;
+$lightred: #d51f1f;
