--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* =============
     Mixins
 ============= */
@@ -320,9 +321,16 @@ template {
 /* =============
     Typography
 ============= */
-h1 {
-  font-family: "Nunito, sans-serif";
-  text-align: left; }
+body {
+  font-family: 'Nunito', sans-serif; }
+
+h1, h2, h3, h4, h5 {
+  margin: 0;
+  padding: 0; }
+
+p {
+  margin: 0;
+  padding: 0; }
 
 /* =============
     Buttons
@@ -348,54 +356,463 @@ textarea {
 /* =============
     Header
 ============= */
-body, html {
+#header body, #header html {
   height: 100%; }
 
-/* The hero image */
-.hero-image {
+#header .hero-image {
   background-image: url("Header_Background.png");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative; }
-  .hero-image img {
+  #header .hero-image img {
     width: 100%;
     height: auto; }
 
-ul {
+#header ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #F6F1F0; }
 
-li {
+#header li {
   float: left; }
 
-li a {
+#header li a {
   display: block;
   color: gray;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none; }
 
-li a:hover {
+#header li a:hover {
   background-color: #111; }
+
+@media only screen and (max-width: 600px) {
+  #header body {
+    background-color: lightblue; } }
 
 /* =============
     Footer
 ============= */
+* {
+  box-sizing: border-box;
+  font-family: ’Lato’, sans-serif;
+  margin: 0;
+  padding: 0; }
+
+ul {
+  list-style: none;
+  padding-left: 0; }
+
+footer {
+  background-image: linear-gradient(-90deg, #776b6b, #ff0010);
+  color: #bbb;
+  line-height: 1.5; }
+
+footer a {
+  text-decoration: none;
+  color: #eee; }
+
+a:hover {
+  text-decoration: underline; }
+
+.ft-title {
+  color: #fff;
+  font-family: ’Merriweather’, serif;
+  font-size: 1.375rem;
+  padding-bottom: 0.625rem; }
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column; }
+
+.container {
+  flex: 1; }
+
+.ft-main {
+  padding: 1.25rem 1.875rem;
+  display: flex;
+  flex-wrap: wrap; }
+
+.ft-main-item {
+  padding: 1.25rem;
+  min-width: 12.5rem; }
+
+.image {
+  background-image: url(/Users/emmahowell/Documents/GitHub/WEB2-FINAL/deploy/img/paxlogofooter.png);
+  background-repeat: no-repeat;
+  width: 158px;
+  height: 165px;
+  justify-content: right; }
+
+@media only screen and (min-width: 29.8125rem) {
+  .ft-main {
+    justify-content: space-around; } }
+
+@media only screen and (min-width: 77.5rem) {
+  .ft-main {
+    justify-content: space-evenly; } }
+
 /* =============
     Section 1
 ============= */
-.badgeimg img {
+#section-1 .button-container {
+  margin: 20px;
+  position: relative; }
+
+#section-1 .button-container img {
   width: 100%;
   height: auto; }
+
+#section-1 .button-container .button {
+  background-color: #E15C5Ced;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); }
+
+#section-1 .header1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  padding: 10px;
+  position: center;
+  font-size: 48px;
+  background-color: #d51f1f;
+  width: 40%; }
 
 /* =============
     Section 2
 ============= */
-.badgeimg img {
-  max-width: 100%;
-  height: auto; }
+#section-2 .button-container {
+  margin: 20px;
+  position: fixed; }
+
+#section-2 .button-container .button {
+  background-color: #E15C5Ced;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+  position: absolute; }
+
+#section-2 .section2 {
+  padding: 30px 30px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 10px; }
+
+#section-2 .container-left {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: ". text images"; }
+  #section-2 .container-left #text2 {
+    grid-area: "text";
+    text-align: left;
+    margin-bottom: 300px;
+    object-fit: cover;
+    position: relative; }
+  #section-2 .container-left #pax {
+    grid-area: "image";
+    background-image: url("/Users/emmahowell/Documents/GitHub/WEB2-FINAL/deploy/img/WhatcanidoatPAX.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    width: 489px;
+    height: 550px; }
+
+#section-2 .header2 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  padding: 10px;
+  position: center;
+  font-size: 48px;
+  background-color: #d51f1f;
+  width: 100%; }
+
+#section-2 .p2 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  position: center relative;
+  padding-top: 10px;
+  width: 100%;
+  font-size: 18px; }
+
+/* =============
+    Section 3
+============= */
+#section-3 .section3 {
+  padding: 30px 30px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 20px; }
+
+#section-3 .container-right {
+  display: grid;
+  grid-template-columns: auto 500px;
+  grid-template-areas: "text image";
+  grid-gap: 20px; }
+  #section-3 .container-right #text {
+    grid-area: "text";
+    text-align: right;
+    margin-bottom: 300px;
+    border-width: 50px; }
+  #section-3 .container-right #enforcer {
+    grid-area: "image";
+    background-image: url("/Users/emmahowell/Documents/GitHub/WEB2-FINAL/deploy/img/img_enforcerpage@2x.png");
+    background-repeat: no-repeat;
+    background-image: contain;
+    max-width: 100%; }
+  #section-3 .container-right .button-container {
+    margin: 20px;
+    position: relative; }
+  #section-3 .container-right .button-container .button {
+    background-color: #E15C5Ced;
+    border: none;
+    border-radius: 4px;
+    color: black;
+    padding: 15px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    margin-top: -330px;
+    margin-left: 50px;
+    cursor: pointer;
+    -webkit-transition: all .25s ease;
+    -moz-transition: all .25s ease;
+    -ms-transition: all .25s ease;
+    -o-transition: all .25s ease;
+    transition: all .25s ease;
+    position: absolute; }
+  #section-3 .container-right .header3 {
+    color: black;
+    font-family: 'Nunito', sans-serif;
+    padding: 10px;
+    position: center;
+    font-size: 48px;
+    background-color: #d51f1f;
+    width: 100%; }
+  #section-3 .container-right .para3 {
+    color: black;
+    font-family: 'Nunito', sans-serif;
+    position: right;
+    font-size: 18px; }
+
+/* =============
+    Section 4
+============= */
+#section-4 .button-container {
+  margin: 20px;
+  position: right; }
+
+#section-4 .button-container .button {
+  background-color: #E15C5Ced;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  margin-top: 10px;
+  cursor: pointer;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+  position: absolute; }
+
+#section-4 .section {
+  width: 80%;
+  padding: 20px 0;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 20px; }
+
+#section-4 .container-left4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: ". images text";
+  text-align: left;
+  grid-gap: 20px; }
+  #section-4 .container-left4 #indie {
+    grid-area: "images";
+    width: 100%; }
+  #section-4 .container-left4 #text4 {
+    grid-area: "text"; }
+
+#section-4 #header4 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  padding: 10px;
+  position: center;
+  font-size: 48px;
+  background-color: #d51f1f;
+  width: 100%; }
+
+#section-4 #p4 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  position: right;
+  font-size: 18px;
+  width: 100%; }
+
+#section-5 .section {
+  width: 80%;
+  padding: 20px 0;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 20px; }
+
+#section-5 .container-right {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: ". text images";
+  text-align: right;
+  grid-gap: 20px; }
+  #section-5 .container-right #text5 {
+    grid-area: "text"; }
+  #section-5 .container-right #paxrising {
+    grid-area: "images"; }
+
+#section-5 .header5 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  padding: 10px;
+  position: center;
+  font-size: 48px;
+  background-color: #d51f1f;
+  width: 100%; }
+
+#section-5 .p5 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  padding: 15px;
+  font-size: 18px;
+  position: right;
+  width: 100%; }
+
+#section-5 .button-container {
+  margin: 20px;
+  position: right; }
+
+#section-5 .button-container .button {
+  background-color: #E15C5Ced;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  margin-top: -15px;
+  margin-left: -300px;
+  cursor: pointer;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+  position: absolute; }
+
+#section-6 .header6 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  padding: 10px;
+  position: center;
+  font-size: 38px;
+  background-color: #d51f1f;
+  width: 100%; }
+
+#section-6 .p6 {
+  color: black;
+  font-family: 'Nunito', sans-serif;
+  position: center relative;
+  padding: 10px;
+  width: 100%;
+  font-size: 18px; }
+
+#section-6 .section {
+  width: 80%;
+  padding: 20px 20px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 2fr;
+  grid-gap: 20px; }
+
+#section-6 .container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-rows: 2fr; }
+
+#section-6 .container.left {
+  grid-template-columns: 2fr 2fr; }
+
+#section-6 .button-container {
+  margin: 20px;
+  position: right; }
+
+#section-6 .button-container .button {
+  background-color: #E15C5Ced;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  margin-top: -15px;
+  margin-left: 60px;
+  cursor: pointer;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+  position: absolute; }
