--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,7 +2,18 @@
     Typography
 ============= */
 
-h1 {
-    font-family: "Nunito, sans-serif";
-    text-align: left;
+body {
+    font-family: 'Nunito', sans-serif;
+    // font-family: 'Comfortaa', cursive;
+    // font-family: 'Pacifico', cursive;
+}
+
+h1, h2, h3, h4, h5 {
+    margin: 0;
+    padding: 0;
+}
+
+p{
+    margin: 0;
+    padding: 0;
 }
