--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -1,13 +1,56 @@
 /* =============
     Section 1
 ============= */
+#section-1{
 
-.badgeimg {
-     
-    img {
-        width: 100%;
-        height: auto;
-    }
 
-    
+.button-container {
+  margin: 20px;
+  position: relative;
+  
+}
+
+.button-container img {
+  width: 100%;
+  height: auto;
+}
+
+.button-container .button {
+  background-color: #E15C5Ced;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+  
+  
+  .header1 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: black;
+    font-family: 'Nunito', sans-serif;
+    padding: 10px;
+    position: center;
+    font-size: 48px;
+    background-color: #d51f1f;
+    width: 40%;
+  }
+
 }
