--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -547,7 +547,7 @@ body {
     position: relative; }
   #section-2 .container-left #pax {
     grid-area: "image";
-    background-image: url("/Users/emmahowell/Documents/GitHub/WEB2-FINAL/deploy/img/WhatcanidoatPAX.jpg");
+    background-image: url("img/WhatcanidoatPAX.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     object-fit: cover;
