--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -61,7 +61,7 @@
 
     #pax {
       grid-area: "image";
-      background-image: url("/Users/emmahowell/Documents/GitHub/WEB2-FINAL/deploy/img/WhatcanidoatPAX.jpg");
+      background-image: url("img/WhatcanidoatPAX.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       object-fit: cover;
