--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -36,7 +36,7 @@
         #enforcer {
         
             grid-area:"image";
-            background-image: url("/Users/emmahowell/Documents/GitHub/WEB2-FINAL/deploy/img/img_enforcerpage@2x.png");
+            background-image: url("img_enforcerpage@2x.png");
             background-repeat: no-repeat;
             background-image: contain;
             max-width: 100%;
