--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -364,8 +364,7 @@ textarea {
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  position: relative; }
+  background-size: cover; }
   #header .hero-image img {
     max-width: 100%;
     height: auto; }
